--- a/simon_gerdtman.html
+++ b/simon_gerdtman.html
@@ -1,1 +1,27 @@
-<h1>Simon</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+    <h1>Simon Gerdtman</h1>
+    <img src="simonBild.jpg"
+    width="150"
+    width="150"
+    >
+    <ul>
+        <li>Klaga</li>
+        <li>Laga mat</li>
+        <li>Sova</li>
+        <li>Ta hand om växter</li>
+    </ul>
+    <div><a href="https://github.com/Gerdtman">Min GitHub</a></div>
+    <a href="index.html">Tillbaka</a>
+    </div>   
+</body>
+</html>
+
