--- a/sanna_hoglund.html
+++ b/sanna_hoglund.html
@@ -7,6 +7,7 @@
     <title>Sanna Höglund</title>
 </head>
 <body>
+    <div>
     <h1>Sanna Höglund</h1>
     <img src="sanna.jpg" alt="SH" width="180" height="300">
     <p>Är bra på:</p>
@@ -18,8 +19,10 @@
 
     
     </ul>
-    <a href="index.html">Tillbaka</a>
+    
+    <a href="https://www.github.com/hosa22no">Min GitHub-profil</a>
+    <a href="https://abowlol.github.io/grupp-7/">Tillbaka</a>
 
-    <!--Länk tillbaka ska leda till index.-->
+</div>
 </body>
 </html>
