--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Grupp 7</h1>
-<a href="Andrej_Djukic.html">Andrej Djukic</a href>
+<a href="Andrej_Djukic.html">Andrej Djukic</a>
 <a href="sanna_hoglund.html">Sanna Höglund</a>
 <a href="simon_gerdtman.html">Simon Gerdtman</a>
 
