--- a/Andrej_Djukic.html
+++ b/Andrej_Djukic.html
@@ -1,5 +1,11 @@
-<div>
-<h1>Andrej Djukic</h1>
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andrej Djukic</title>
+    
 imgsrc="andrej.jpg"
 <p>är bra på:</p>
 <ul> 
