--- a/Andrej_Djukic.html
+++ b/Andrej_Djukic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrej Djukic</title>
     
-imgsrc="andrej.jpg"
+<imgsrc="andrej.jpg">
 <p>är bra på:</p>
 <ul> 
     <li>Koka pasta</li>
@@ -17,5 +17,5 @@ imgsrc="andrej.jpg"
 
 <a href="//https://github.com/abowlol>Min github-profil</ahref>
 
-<a href="//index.html">Tillbaka</ahref>
+<a href="//index.html">Tillbaka</a>
 </div>
