--- a/Andrej_Djukic.html
+++ b/Andrej_Djukic.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrej Djukic</title>
-    
-<imgsrc="andrej.jpg">
-<p>är bra på:</p>
+</head>
+<body>
+    <div>
+    <h1>Andrej Djukic</h1>
+    <img src="andrej.jpg" alt="SH" width="180" height="300">
+    <p>Är bra på:</p>
+
 <ul> 
     <li>Koka pasta</li>
     <li>Datorspel</li>
@@ -19,3 +23,6 @@
 
 <a href="//index.html">Tillbaka</a>
 </div>
+<html>
+<head>
+<body>
