--- a/Andrej_Djukic.html
+++ b/Andrej_Djukic.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <h1>Andrej Djukic</h1>
-    <img src="andrej.jpg" alt="SH" width="180" height="300">
+    <img src="andrej.jpg" alt="SH" width="200" height="200">
     <p>Är bra på:</p>
 
 <ul> 
@@ -19,9 +19,9 @@
     <li>Dricka vatten</li>
 </ul>
 
-<a href="//https://github.com/abowlol>Min github-profil</ahref>
-
+<a href="//https://github.com/abowlol>Min github-profil</a>
 <a href="//index.html">Tillbaka</a>
+                      
 </div>
 </html>
 </head>
