--- a/Andrej_Djukic.html
+++ b/Andrej_Djukic.html
@@ -7,9 +7,11 @@
     <title>Andrej Djukic</title>
 </head>
 <body>
-    <div>
+<div>
     <h1>Andrej Djukic</h1>
-    <img src="andrej.jpg" alt="SH" width="200" height="200">
+    <img src="andrej.jpg"
+         width="200" 
+         height="200">
     <p>Är bra på:</p>
 
 <ul> 
@@ -19,9 +21,9 @@
     <li>Dricka vatten</li>
 </ul>
 
-<a href="//https://github.com/abowlol>Min github-profil</a>
+<div><a href="//https://github.com/abowlol>Min github-profil</a>
 <a href="//index.html">Tillbaka</a>
-                      
+    </div>                      
 </div>
 </html>
 </head>
