--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>Grupp 7</h1>
-<a href="Andrej_Djukic.html">Andrej Djukic</a>
-<a href="sanna_hoglund.html">Sanna Höglund</a>
-<a href="simon_gerdtman.html">Simon Gerdtman</a>
-
+<ul>
+    <li><a href="Andrej_Djukic.html">Andrej Djukic</a></li>
+    <li><a href="sanna_hoglund.html">Sanna Höglund</a></li>
+    <li><a href="simon_gerdtman.html">Simon Gerdtman</a></li>
+</ul>
