--- a/Andrej_Djukic.html
+++ b/Andrej_Djukic.html
@@ -21,9 +21,9 @@
     <li>Dricka vatten</li>
 </ul>
 
-<div><a href="//https://github.com/abowlol>Min github-profil</a>
+    <div><a href="//https://github.com/abowlol>Min github-profil</a></div>
 <a href="//index.html">Tillbaka</a>
-    </div>                      
+                      
 </div>
 </html>
 </body>
