--- a/sanna_hoglund.html
+++ b/sanna_hoglund.html
@@ -19,9 +19,11 @@
 
     
     </ul>
-    
+    <div>
     <a href="https://www.github.com/hosa22no">Min GitHub-profil</a>
+    </div>
     <a href="https://abowlol.github.io/grupp-7/">Tillbaka</a>
+
 
 </div>
 </body>
