Jag gjorde ändringar i min branch och den färdiga profilen  efter feedback

--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<h1>Ismail Taletovic</h1>
-<img src="totallyme.jpg" width="250" height="300">
-<ul>Bra på följande:</ul>
-<ul>
-<li>Fysisk uthållighet</li>
-<li>Lära sig nya saker</li>
-<li>Datorspel</li>
-<li>Inte sjunga</li>
-</ul>
-<a href="https://github.com/iceotop">My Github profile</a>
-<a href="index.html">Tillbaka</a>
+
+
+
+
+<a href="IsmailTaletovic.html">Ismail Taletovic</a>
