--- a/IsmailTaletovic.html
+++ b/IsmailTaletovic.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ismail Taletovic</h1>
-<img src="totallyme.jpg" width="250" height="300">
+<img src="portrait.jpg" width="250" height="300">
 <ul>Bra på följande:</ul>
 <ul>
 <li>Fysisk uthållighet</li>
