--- a/sanna_hoglund.html
+++ b/sanna_hoglund.html
@@ -22,7 +22,7 @@
     <div>
     <a href="https://www.github.com/hosa22no">Min GitHub-profil</a>
     </div>
-    <a href="https://abowlol.github.io/grupp-7/">Tillbaka</a>
+    <a href="index.html">Tillbaka</a>
 
 
 </div>
