--- a/Andrej_Djukic.html
+++ b/Andrej_Djukic.html
@@ -7,11 +7,26 @@
     <title>Andrej Djukic</title>
 </head>
 <body>
+    <style>
+        body {
+    background-image: url("flames.jpg");
+}
+.lista {
+    background-color: orange;
+    width: 160px;
+    padding: 10px, 0px 10px, 0px;
+    border: 2px dotted;
+    border-radius: 5px;
+    border-color: black;
+}
+    </style>
 <div>
     <h1>Andrej Djukic</h1>
     <img src="andrej.jpg"
          width="200" 
          height="200">
+
+<div class="lista">
     <p>Är bra på:</p>
 
 <ul> 
@@ -20,6 +35,7 @@
     <li>Resa </li>
     <li>Dricka vatten</li>
 </ul>
+</div>
 
 <div><a href="https://github.com/abowlol">Min github-profil</a></div>
 <a href="index.html">Tillbaka</a>
