--- a/IsmailTaletovic.html
+++ b/IsmailTaletovic.html
@@ -7,8 +7,22 @@
     <title>Ismail T</title>
 </head>
 <body>
+    <style>
+        body {
+    background-image: url("flames.jpg");
+}
+.lista {
+    background-color: orange;
+    width: 160px;
+    padding: 10px, 0px 10px, 0px;
+    border: 2px dotted;
+    border-radius: 5px;
+    border-color: black;
+}
+    </style>
     <h1>Ismail Taletovic</h1>
 <img src="portrait.jpg" width="250" height="300">
+<div class="lista">
 <ul>Bra på följande:</ul>
 <ul>
 <li>Fysisk uthållighet</li>
@@ -16,6 +30,7 @@
 <li>Datorspel</li>
 <li>Inte sjunga</li>
 </ul>
+</div>
 <a href="https://github.com/iceotop">My Github profile</a>
 <div></div>
 <br></br>
