--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grupp 7</title>
+</head>
+<body>
+    <style>
+        body {
+    background-image: url("flames.jpg");
+}
+.lista {
+    background-color: orange;
+    width: 160px;
+    padding: 10px, 0px 10px, 0px;
+    border: 2px dotted;
+    border-radius: 5px;
+    border-color: black;
+}
+
+    </style>
 <h1>Grupp 7</h1>
-<ul>
+<ul class="lista">
     <li><a href="Andrej_Djukic.html">Andrej Djukic</a></li>
     <li><a href="sanna_hoglund.html">Sanna Höglund</a></li>
     <li><a href="simon_gerdtman.html">Simon Gerdtman</a></li>
     <li><a href="IsmailTaletovic.html">Ismail Taletovic</a></li>
 </ul>
+</body>
