--- a/sanna_hoglund.html
+++ b/sanna_hoglund.html
@@ -7,9 +7,23 @@
     <title>Sanna Höglund</title>
 </head>
 <body>
+    <style>
+        body {
+    background-image: url("flames.jpg");
+}
+.lista {
+    background-color: orange;
+    width: 160px;
+    padding: 10px, 0px 10px, 0px;
+    border: 2px dotted;
+    border-radius: 5px;
+    border-color: black;
+}
+    </style>
     <div>
     <h1>Sanna Höglund</h1>
     <img src="sanna.jpg" alt="SH" width="180" height="300">
+    <div class="lista">
     <p>Är bra på:</p>
     <ul>
         <li>Sticka</li>
@@ -19,6 +33,7 @@
 
     
     </ul>
+    </div>
     <div>
     <a href="https://www.github.com/hosa22no">Min GitHub-profil</a>
     </div>
