--- a/simon_gerdtman.html
+++ b/simon_gerdtman.html
@@ -7,18 +7,33 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        body {
+    background-image: url("flames.jpg");
+}
+.lista {
+    background-color: orange;
+    width: 160px;
+    padding: 10px, 0px 10px, 0px;
+    border: 2px dotted;
+    border-radius: 5px;
+    border-color: black;
+}
+    </style>
     <div>
     <h1>Simon Gerdtman</h1>
     <img src="simonBild.jpg"
     width="150"
     width="150"
     >
+    <div class="lista">
     <ul>
         <li>Klaga</li>
         <li>Laga mat</li>
         <li>Sova</li>
         <li>Ta hand om växter</li>
     </ul>
+</div>
     <div><a href="https://github.com/Gerdtman">Min GitHub</a></div>
     <a href="index.html">Tillbaka</a>
     </div>   
